# EchoConnect

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  SPRINTS.md  sprint3.md
.github/workflows/: CI-lint.yml  CI-linux.yml  CI-macos.yml  CI-windows.yml
DemoApp/: CMakeLists.txt
DemoApp/src/: AAction.cc  AAction.h  AView.cc  AView.h  Argument.h  CalibrateReceive.cc  CalibrateReceive.h  CalibrateSend.cc  CalibrateSend.h  Chat.cc  Chat.h  ConcurrentBuffer.cc  ConcurrentBuffer.h  Config.cc  Config.h  Console.cc  Console.h  Help.cc  Help.h  IAction.cc  IAction.h  IView.cc  IView.h  InputField.cc  InputField.h  Menu.cc  Menu.h  ReceiveFile.cc  ReceiveFile.h  ReceiveText.cc  ReceiveText.h  SendFile.cc  SendFile.h  SendText.cc  SendText.h  Settings.cc  Settings.h  Utils.cc  Utils.h  main.cc  (+1 more)
libecho/: CMakeLists.txt
libecho/docs/: CMakeLists.txt  Doxyfile.in  echoconnect.md  packet.md  protocol.md  receiver.md  sender.md
libecho/examples/: CMakeLists.txt
libecho/examples/RawConnection/: CMakeLists.txt  main.cc
libecho/include/: Echo.h  EchoCalibration.h  EchoProtocol.h  EchoRawConnection.h  Exceptions.h  echo.h
libecho/src/: AudioFormatFactory.cc  AudioFormatFactory.h  AudioInput.cc  AudioInput.h  AudioOutput.cc  AudioOutput.h  AudioStream.h  BitAudioConverter.h  BitReceiver.cc  BitReceiver.h  BitReceiverv2.cc  BitReceiverv2.h  BitSender.cc  BitSender.h  BitSenderv2.cc  BitSenderv2.h  Calibrator.cc  Calibrator.h  Dft.cc  Dft.h  Echo.cc  Echo.h  EchoCalibration.cc  EchoProtocol.cc  EchoProtocol.h  EchoRawConnection.cc  EchoRawConnectionImpl.cc  EchoRawConnectionImpl.h  HammingCode.cc  HammingCode.cpp  HammingCode.h  IAudioConverter.h  IReceiver.h  ISender.h  Math.cc  Math.h  Packet.cc  Packet.h  QTInitializer.cc  QTInitializer.cpp  (+6 more)
libecho/tests/: CMakeLists.txt  alt.cpp  dft.cpp  ecc_tests.cc  ecc_tests.cpp  getlim.cpp  info.cpp  instructions.txt  main.cc  main.cpp  packet_my_test.cc  packet_tests.cc  packet_tests.cpp  protocol_recv.cc  protocol_send.cc  self_cal.cpp  send.cpp  sendrecv.cpp  show.cpp  step.cpp  test.cpp  test_EchoRawConnection.cpp  tmp_test.cpp  v1.txt  wave.cpp
tools/: clang-format.sh  clang-tidy.sh
